@@ -42,6 +42,7 @@ class unit_animation:public animated<unit_frame>
 		std::vector<config> unit_filter_;
 		std::vector<config> secondary_unit_filter_;
 		std::vector<gamemap::location::DIRECTION> directions;
+		int frequency_;
 };
 
 class attack_type;
