@@ -62,6 +62,7 @@ Version 1.3-svn:
      in every scenario played using that era)
    * new operation for set_variable : divide
    * Animations now use duration= tag instead of begin= and end= (backward
+   * Animations now have a frequency= filter to allow to tweak realtive rarety
    compatible)
    * [message]s now use the duration= tag instead of [delay]ing afterwards
  * multiplayer game management
